@@ -1,3 +1,8 @@
+2003-01-03  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Sorted and added missing file.
+	* sv.po: Updated Swedish translation.
+
 2003-01-03  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
